--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run: make docker
       - run:
           name: "Wait for minikube"
@@ -125,7 +125,7 @@ jobs:
             sudo chown -R $USER $HOME/.minikube
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run: cd pilot; bin/gocompile-and-push-images.sh -hub $HUB -tag $TAG -build-only
       - run: go build -i ./pilot/test/integration
       - run:
@@ -173,7 +173,7 @@ jobs:
             sudo chown -R $USER $HOME/.minikube
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run: cd pilot; bin/gocompile-and-push-images.sh -hub $HUB -tag $TAG -build-only
       - run: go build -i ./pilot/test/integration
       - run:
@@ -197,7 +197,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           command: |
             cd /go/src/istio.io/istio
@@ -205,7 +205,7 @@ jobs:
                dep ensure
             fi
       - save_cache:
-          key: dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+          key: dep-cache-{{ checksum "Gopkg.lock" }}
           paths:
             - /go/src/istio.io/istio/vendor
 
@@ -221,7 +221,7 @@ jobs:
           background: true
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           command: |
             cd /go/src/istio.io/istio
@@ -267,7 +267,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           command: |
             docker login -u $DOCKER_USER -p $DOCKER_PASS
@@ -282,7 +282,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           command: |
             mkdir -p /go/out/tests
@@ -302,7 +302,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           command: |
             cd /go/src/istio.io/istio
@@ -328,7 +328,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           no_output_timeout: 900
           command: |
@@ -341,7 +341,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - setup_remote_docker:
           docker_layer_caching: true
       - run:
@@ -361,7 +361,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - dep-cache-{{ checksum "Gopkg.toml" }}-{{ checksum "WORKSPACE" }}
+            - dep-cache-{{ checksum "Gopkg.lock" }}
       - run:
           command: |
             cp -a /usr/local/go /go
